data/derived/fa15/progs/unify/prog3779.ml.out
Characters 97-99:
  | Sine sine		    -> sin(pi*sine)
                          ^^
Error: This expression has type float but an expression was expected of type
         int
